@@ -1,114 +1,98 @@
 package levosilimo.everlastingskins.skinchanger;
 
-import com.google.common.collect.Lists;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import levosilimo.everlastingskins.enums.SkinVariant;
-import net.minecraft.util.Mth;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Random;
-import java.util.Scanner;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.*;
+
+import static levosilimo.everlastingskins.util.RandomUserAgent.getRandomUserAgent;
 
 public class RandomMojangSkin {
-    private static final ArrayList<String> blackList=Lists.newArrayList("ad");
-    public static String randomNick(boolean needCape,SkinVariant variant) {
-        StringBuilder html = new StringBuilder();
-        InputStream response = null;
-        int min = 0;
-        int max = 999999;
-        try {
-            String url;
-            if (needCape) {
-                Random rand = new Random();
-                int year = Mth.nextInt(rand, 2011, 2016);
-                while (year == 2014) {
-                    year = Mth.nextInt(rand, 2011, 2016);
-                }
-                int page = Mth.nextInt(rand, 1, 24) + ((year % 10) * 5);
-                url = "https://mskins.net/en/cape/minecon_" + Mth.nextInt(new Random(), 2011, 2016) + "?page=" + page;
-                min = 11000;
-                max = 65000;
-            } else {
-                url = "https://mskins.net/en/skins/random";
-                min = 11000;
-                max = 38000;
-            }
-            response = new URL(url).openStream();
+    private static final List<String> BLACK_LIST = List.of("ad");
+    private static final int MIN_SKIN_INDEX = 9000;
+    private static final int MAX_SKIN_INDEX = 40000;
+    private static final String SPAN_TEXT = "<span class=\"card-title green-text truncate\">";
+    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder().version(HttpClient.Version.HTTP_1_1).build();
 
-
-            Scanner scanner = new Scanner(response);
-            String responseLine = scanner.useDelimiter("</body>").next();
-            html.append(responseLine);
-
-        } catch (IOException ex) {
-            ex.printStackTrace();
-        } finally {
-            try {
-                if (response != null) response.close();
-            } catch (IOException ex) {
-                ex.printStackTrace();
+    public static String randomNickname(boolean needCape, SkinVariant variant, boolean latest) {
+        String url;
+        if (latest) url = "https://mskins.net/ru/skins/latest";
+        else if (needCape) {
+            Random rand = new Random();
+            int year = rand.nextInt(6) + 2011;
+            while (year == 2014) {
+                year = rand.nextInt(6) + 2011;
             }
-        }
-        int RandomSkinIndex = html.indexOf("<span class=\"card-title green-text truncate\">", Mth.nextInt(new Random(), min, max)) + 45;
-        String nickname = "";
-        if (RandomSkinIndex > 44) {
-            int RandomSkinIndexStop = html.indexOf("<", RandomSkinIndex);
-            nickname = html.substring(RandomSkinIndex, RandomSkinIndexStop);
-            while (nickname.isEmpty()) {
-                nickname = RandomMojangSkin.randomNick(needCape, variant);
-            }
-            if(blackList.contains(nickname))nickname = RandomMojangSkin.newNick(variant);
-            if (needCape && !hasCape(nickname)) nickname = RandomMojangSkin.randomNick(true, variant);
-            if ((variant.equals(SkinVariant.slim) && !isSlim(nickname)) || ((variant.equals(SkinVariant.classic) && isSlim(nickname))))
-                nickname = RandomMojangSkin.randomNick(needCape, variant);
+            int page = rand.nextInt(24) + ((year % 10) * 5) + 1;
+            url = String.format("https://mskins.net/en/cape/minecon_%d?page=%d", year, page);
         } else {
-            nickname = RandomMojangSkin.randomNick(needCape, variant);
+            url = "https://mskins.net/en/skins/random";
         }
+        String html = getHtmlFromUrl(url);
+        if (html.length() < 20000) return "Notch";
+
+        HashSet<String> nicknames = new HashSet<>();
+        int charPointer = MIN_SKIN_INDEX;
+        int randomSkinIndex = -1;
+        while (charPointer <= MAX_SKIN_INDEX) {
+            randomSkinIndex = html.indexOf(SPAN_TEXT, charPointer) + SPAN_TEXT.length();
+            if (randomSkinIndex > 44) {
+                charPointer = randomSkinIndex + 1;
+                int randomUsernameIndexEnd = html.indexOf("<", randomSkinIndex);
+                if(randomUsernameIndexEnd == -1) break;
+                nicknames.add(html.substring(randomSkinIndex, randomUsernameIndexEnd));
+            } else break;
+        }
+        if (nicknames.isEmpty()) return "Notch";
+        Stack<String> nicknamesStack = new Stack<>();
+        nicknamesStack.addAll(nicknames);
+        Collections.shuffle(nicknamesStack);
+        String nickname = "Notch";
+        while (!nicknamesStack.isEmpty()){
+            nickname = nicknamesStack.pop();
+            while ((nickname.isEmpty() || BLACK_LIST.contains(nickname)) && !nicknamesStack.isEmpty()) {
+                nickname = nicknamesStack.pop();
+            }
+            if (needCape && !hasCape(nickname)) {
+                continue;
+            }
+            if ((variant == SkinVariant.slim && !isSlim(nickname))
+                    || (variant == SkinVariant.classic && isSlim(nickname))) {
+                continue;
+            }
+            break;
+        }
+
         return nickname;
     }
-    public static String newNick(SkinVariant variant) {
-        StringBuilder html = new StringBuilder();
+
+    private static String getHtmlFromUrl(String url) {
         try {
-            URL url = new URL("https://mskins.net/ru/skins/latest");
-            HttpURLConnection connection = ((HttpURLConnection)url.openConnection());
-            connection.addRequestProperty("User-Agent", "Mozilla/4.0");
-            InputStream input;
-            if (connection.getResponseCode() == 200)  // this must be called before 'getErrorStream()' works
-                input = connection.getInputStream();
-            else input = connection.getErrorStream();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(input));
-            String msg;
-            while ((msg =reader.readLine()) != null)
-                html.append(msg);
-        } catch (IOException e) {
-            e.printStackTrace();
+            HttpRequest request = HttpRequest.newBuilder().uri(new URI(url)).header("User-Agent", getRandomUserAgent()).GET().build();
+            HttpResponse<String> response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
+            return response.body();
+        } catch (IOException | InterruptedException | URISyntaxException ex) {
+            ex.printStackTrace();
+            return "";
         }
-        int RandomSkinIndex = html.indexOf("<span class=\"card-title green-text truncate\">", Mth.nextInt(new Random(),11000,65000)) + 45;
-        if(RandomSkinIndex>44){
-            int RandomSkinIndexStop = html.indexOf("<", RandomSkinIndex);
-            String nickname = html.substring(RandomSkinIndex, RandomSkinIndexStop);
-            if(blackList.contains(nickname))nickname = RandomMojangSkin.newNick(variant);
-            if((variant.equals(SkinVariant.slim)&&!isSlim(nickname))||((variant.equals(SkinVariant.classic)&&isSlim(nickname)))) nickname = RandomMojangSkin.newNick(variant);
-            return nickname;
-        }
-        else return "Notch";
     }
+
     private static final JsonParser parser = new JsonParser();
-    public static boolean hasCape(String nick){
+
+    public static boolean hasCape(String nick) {
         String decodedSTR = new String(Base64.getDecoder().decode(MojangSkinProvider.getSkin(nick).getValue()));
         JsonObject decodedJSON = parser.parse(decodedSTR).getAsJsonObject();
         return decodedJSON.getAsJsonObject("textures").has("CAPE");
-        //return decodedJSON.getAsJsonObject("textures").getAsJsonObject("CAPE").getAsJsonPrimitive("url").getAsString().contains("http");
     }
-    public static boolean isSlim(String nick){
+
+    public static boolean isSlim(String nick) {
         String decodedSTR = new String(Base64.getDecoder().decode(MojangSkinProvider.getSkin(nick).getValue()));
         JsonObject decodedJSON = parser.parse(decodedSTR).getAsJsonObject();
         return decodedJSON.getAsJsonObject("textures").getAsJsonObject("SKIN").has("metadata");
